--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "valorantstore",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon ./src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
